<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:src="@drawable/main_logo"
            />
        <TextView
        		
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:text="Find a Player by Last Name, Team or Position"
                android:typeface="serif"
                android:shadowColor="#563283"  
        		android:shadowRadius="1.5"  
        		android:shadowDx="3"  
        		android:shadowDy="3" 
                />
                <TextView
                	android:layout_width="fill_parent"
                	android:layout_height="wrap_content"
                	/>
        <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                
                >
                <TableRow>
                        <TextView
                                android:text="@string/search"
                                android:layout_marginLeft="5px"
                                android:typeface="serif"
                                android:textStyle="bold"
                                android:shadowColor="#563283"  
        		android:shadowRadius="1.5"  
        		android:shadowDx="2"  
        		android:shadowDy="2" 
                            
                        />
                        <EditText
                                android:id="@+id/searchBar"
                        />
                        <Button
                                android:id="@+id/searchButton"
                                android:text="@string/search"
                                android:paddingLeft="5px"
                                android:paddingRight="5px"
                                android:paddingTop="5px"
                                android:paddingBottom="5px"
                               	android:typeface="serif"
                               	android:textStyle="bold"
                                android:background="@drawable/btn_custom"
                        />
                </TableRow>
                
                <TableRow>
                        <TextView
                                android:text="@string/position"
                                android:textStyle="bold"
                                android:typeface="serif"
                                android:shadowColor="#563283"  
                                android:layout_marginLeft="5px"
        		android:shadowRadius="1.5"  
        		android:shadowDx="2"  
        		android:shadowDy="2" 
                                
                        />
                        <Spinner
                                 android:id="@+id/positionSpinner"
                                android:paddingLeft="8px"
                                android:paddingTop="5px"
                                android:paddingRight="5px"
                                android:paddingBottom="5px"
                                android:layout_marginBottom="5px"
                                android:layout_marginLeft="3px"
                                android:bottomRightRadius="7dp" 
                              	android:bottomLeftRadius="7dp" 
     							android:topLeftRadius="7dp" 
     							android:topRightRadius="7dp"
     							
     							
                                android:prompt="@string/positionPrompt"
                                android:background="@drawable/spinner_custom"
                        />
                </TableRow>
                <TableRow>
                        <TextView
                                android:text="@string/team"
                                android:textStyle="bold"
                                android:typeface="serif"
                                android:shadowColor="#563283"  
        		android:shadowRadius="1.5"  
        		android:shadowDx="2"  
        		android:shadowDy="2" 
        		android:layout_marginLeft="5px"
                                
                        />
                        <Spinner
                                android:id="@+id/teamSpinner"
                                android:paddingLeft="8px"
                                android:paddingTop="5px"
                                android:paddingRight="50px"
                                android:paddingBottom="5px"
                                android:layout_marginLeft="3px"
                                android:prompt="@string/teamPrompt"
                                android:background="@drawable/spinner_custom"
                                android:layout_marginBottom="5px"
                        />
                </TableRow>
                <TableRow>
                	<TextView
                		android:text=""
                		/>
                		<Button
                		android:layout_marginLeft="3px"
                		android:id="@+id/playerValueButton"
                		android:text="@string/playerValue"
                		android:textStyle="bold"
                		android:typeface="serif"
                		android:background="@drawable/btn_custom">
                		</Button>
                		</TableRow>
                <TableRow>
                        <TextView
                                android:text=""
                        />
                        <Button 
                        android:layout_marginTop="5px"
                        android:layout_marginLeft="3px" 
                        android:text="@string/about" 
                        android:id="@+id/aboutButton" 
                        android:textStyle="bold"
                        android:typeface="serif"
                        android:paddingLeft="23px"
                        android:paddingRight="23px"
                        android:background="@drawable/btn_custom">
                        </Button>
                </TableRow>
                
        </TableLayout>
</LinearLayout>